updating package json

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "keywords": [
     "week",
-    "number"
+    "number",
+    "Dates"
   ],
   "author": "Emmanuel-nyiko",
   "license": "ISC",
