--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "current-month-week-number",
-  "version": "1.1.0-0",
+  "version": "1.1.0",
   "description": "Get the current month week number",
   "main": "index.js",
   "scripts": {
